# src/main/java/com/csms/admin/dto/UpdateMemberRequestDto.java
@@ -1,0 +1,17 @@
+package com.csms.admin.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class UpdateMemberRequestDto {
+    private String phone;
+    private String email;
+    private Integer level;
+}
+
